// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelHeaderDropdown/MenuItem.AddMembers should match snapshot 1`] = `
<Connect(ChannelPermissionGate)
  channelId="channel_id"
  permissions={
    Array [
      "manage_public_channel_members",
    ]
  }
  teamId="team_id"
>
  <li
    role="presentation"
  >
    <Connect(ModalToggleButtonRedux)
      dialogProps={
        Object {
          "channel": Object {
            "id": "channel_id",
            "team_id": "team_id",
            "type": "O",
          },
        }
      }
      dialogType={[Function]}
      id="channelAddMembers"
      modalId="channel_invite"
      role="menuitem"
    >
      <FormattedMessage
        defaultMessage="Add Members"
        id="navbar.addMembers"
        values={Object {}}
      />
    </Connect(ModalToggleButtonRedux)>
  </li>
</Connect(ChannelPermissionGate)>
`;

exports[`components/ChannelHeaderDropdown/MenuItem.AddMembers should render correctly if the channel type is DM 1`] = `
<li
  role="presentation"
>
  <Connect(ModalToggleButtonRedux)
    dialogProps={
      Object {
        "isExistingChannel": true,
      }
    }
    dialogType={[Function]}
    id="channelAddMembersGroup"
    modalId="create_dm_channel"
    role="menuitem"
  >
    <FormattedMessage
      defaultMessage="Add Members"
      id="channel_header.addMembers"
      values={Object {}}
    />
  </Connect(ModalToggleButtonRedux)>
</li>
`;
